--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@types/react-dom": "^18.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
+    "tailwind-styled-components": "^2.2.0",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
@@ -44,6 +47,13 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "@rollup/plugin-replace": "^2.2.1",
+    "@types/node": "14.x",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^1.0.1",
+    "gh-pages": "^4.0.0",
+    "typescript": "^4.3.5",
+    "vite": "^2.5.0"
   }
 }
