--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "my-app",
+  "name": "Diogo Almeida dev",
   "version": "0.1.0",
   "homepage": "https://fusko.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.8",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^15.14.9",
+    "@types/react": "^17.0.52",
+    "@types/react-dom": "^17.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.0",
+    "react-particles": "^2.6.0",
     "react-scripts": "5.0.1",
+    "tslib": "^2.4.1",
+    "tsparticles": "^2.6.0",
+    "tsparticles-engine": "^2.6.0",
+    "typescript": "^4.9.4",
+    "web-vitals": "^2.1.4",
     "styled-components": "^5.3.6",
     "tailwind-styled-components": "^2.2.0",
-    "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^6.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
